--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div >
         <table>
             <tr>
-                <th onclick="newgame()">New game</th>
+                <th onclick="gameRest()">New game</th>
             </tr>
             <tr>
                 <td onclick="game4()">4x4</td>
