--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
         </table>
     </div>
 </div>
-<script src="game.js"></script>
-<script src="directional.js"></script>
+
+<script src="js/directional.js"></script>
+<script src="js/game.js"></script>
+<script src="js/grid.js"></script>
+
+
+<!--<script src="jss/game.js"></script>-->
+<!--<script src="jss/cell.js"></script>-->
+<!--<script src="jss/gridd.js"></script>-->
 </body>
 </html>
